add_executable(demo1_socket demo1_socket.cpp)
target_link_libraries(demo1_socket PRIVATE Threads::Threads)

add_executable(demo2_select demo2_select.cpp)
add_executable(demo3_epoll demo3_epoll.cpp)
add_executable(demo4_c1000k_server demo4_c1000k_server.cpp)
add_executable(demo4_c1000k_client demo4_c1000k_client.cpp)

# echo server demo
add_executable(d1_echo_client echo/d1_echo_client.cpp)
target_link_libraries(d1_echo_client basic_lib)
add_executable(d1_multi_thread_echo_server echo/d1_multi_thread_echo_server.cpp)
target_link_libraries(d1_multi_thread_echo_server Threads::Threads basic_lib)

add_executable(d2_multi_process_echo_server echo/d2_multi_process_echo_server.cpp)
target_link_libraries(d2_multi_process_echo_server basic_lib)

add_executable(d3_select_echo_client echo/d3_select_echo_client.cpp)
target_link_libraries(d3_select_echo_client basic_lib)
add_executable(d3_select_echo_server echo/d3_select_echo_server.cpp)
target_link_libraries(d3_select_echo_server basic_lib)

add_executable(d4_poll_echo_client echo/d4_poll_echo_client.cpp)
target_link_libraries(d4_poll_echo_client basic_lib)
add_executable(d4_poll_echo_server echo/d4_poll_echo_server.cpp)
target_link_libraries(d4_poll_echo_server basic_lib)

add_executable(d5_epoll_echo_client echo/d5_epoll_echo_client.cpp)
target_link_libraries(d5_epoll_echo_client basic_lib)
add_executable(d5_epoll_echo_server echo/d5_epoll_echo_server.cpp)
target_link_libraries(d5_epoll_echo_server basic_lib)


add_executable(sync_dns_client dns/sync_dns_client.cpp)

add_executable(async_dns_client dns/async_dns_client.cpp)
target_link_libraries(async_dns_client Threads::Threads)
